<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:textAlignment="center"
        android:layout_margin="10dp"
        />
    <View
        android:layout_width="200dp"
        android:layout_height="5px"
        android:background="@color/activeRed"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_callout"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>
    <LinearLayout

        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:src="@drawable/ic_location"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:text="Gen. Romualda Traugutta 9, 90-106 Łódź"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:src="@drawable/ic_phone"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:text="+48 574 021 180"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:src="@drawable/ic_time"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:text="Pon - Nd 12:00 - 21:00"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:src="@drawable/ic_email"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            android:text="papuvege@gmail.com"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgGrey">
        <EditText
            android:minHeight="30dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/first_name_last_name"/>
        <EditText
            android:minHeight="30dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email"/>
        <EditText
            android:minHeight="30dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/mobile"/>
        <EditText
            android:minHeight="30dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/topic"/>
        <EditText
            android:minHeight="75dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/message"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_gravity="center"
        app:backgroundTint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="0px"
        android:text="@string/send_message"
        android:elevation="0dp"
        android:translationZ="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"/>
    </LinearLayout>
</ScrollView>


</LinearLayout>