<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="item"
            type="pl.nluk.papuvege.models.MenuItem" />
    </data>

        <LinearLayout
            android:background="@color/white"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_margin="10dp"
                tools:scaleType="centerCrop"
                tools:src="@drawable/item_image_placeholder"
                app:imageUrl="@{item.imageURL}"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>
            <TextView
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{item.name}"
                android:textAllCaps="true"
                android:textAlignment="center"
                tools:text="@string/itemTitlePlaceholder" />
            <TextView
                android:layout_marginHorizontal="10dp"
                android:textAlignment="center"
                android:maxLines="3"
                android:ellipsize="end"
                android:text="@{item.description}"
                android:visibility="@{item.description.length() > 0 ? View.VISIBLE : View.GONE}"
                tools:text="@string/itemDescriptionPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:text="@{item.priceString()}"

                tools:text="25,00zł" />
            <com.google.android.material.button.MaterialButton
                app:backgroundTint="@color/black"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="0px"
                android:text="@string/order"
                android:elevation="0dp"
                android:translationZ="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"/>

        </LinearLayout>


</layout>